# agent-inc

./: .env.example  CLAUDE.md  CONTRACT.md  DEMO.md  LEARNINGS.md  README.md  RESULTS_INTEGRITY.md  STATUS.md  dashboard.py  dashboard_data.py  env.py  live_run.py  pyproject.toml  tasks.py
.streamlit/: config.toml
_templates/deepresearch/: .env.example  .gitignore  Dockerfile.hud  README.md  env.py  pyproject.toml  tasks.py
_templates/deepresearch/tests/: conftest.py  test_env.py
data/: sample_runs.json
data/scenarios/: easy_competitive_teardown.json  easy_content_product_descriptions.json  easy_cs_onboarding_checklist.json  easy_data_analysis_sales_summary.json  easy_gtm_launch_checklist.json  easy_market_research_electric_bikes.json  easy_ops_playbook_password_reset.json  easy_pricing_usage_metering.json  easy_ticket_triage.json  easy_workflow_lead_scoring.json  hard_competitive_battlecard.json  hard_content_email_sequence.json  hard_cs_enterprise_qbr_program.json  hard_data_analysis_ab_test_readout.json  hard_gtm_expansion_strategy.json  hard_market_research_carbon_capture.json  hard_ops_playbook_data_breach_response.json  hard_pricing_strategy.json  hard_pricing_usage_credits_model.json  hard_workflow_invoice_approval.json  (+10 more)
demo/: README.md  data.js  index.html  vercel.json
results/: calibration.json  quarantine.jsonl  rl_done.json  rl_state.json  training_curve.jsonl
scripts/: build_demo.py  make_receipts.py  pool_probe.py  rl_smoke.py  rl_status.sh  rl_supervise.sh  rl_train.py  serve_demo.py
tests/: conftest.py  test_env.py
